<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.4</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>com.github.vakho10</groupId>
    <artifactId>apdu-tracer</artifactId>
    <version>20250807115200</version>

    <name>APDU Tracer</name>
    <description>APDU tracer JavaFX modular application. Uses tshark CMD tool to trace and show APDUs.</description>
    <url>https://github.com/vakho10/apdu-tracer</url>

    <organization>
        <name>Vakho10</name>
        <url>https://github.com/vakho10</url>
    </organization>

    <developers>
        <developer>
            <id>vakho10</id>
            <name>Vakho</name>
            <url>https://github.com/vakho10</url>
            <roles>
                <role>developer</role>
            </roles>
        </developer>
    </developers>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <javafx.version>21.0.8</javafx.version>
        <jre.download.link>
            https://github.com/adoptium/temurin21-binaries/releases/download/jdk-21.0.8%2B9/OpenJDK21U-jre_x64_windows_hotspot_21.0.8_9.zip
        </jre.download.link>
        <jre.root.folder>jdk-21.0.8+9-jre</jre.root.folder>
        <main-class>com.github.vakho10.apdutracer.TracerApplication</main-class>
    </properties>

    <dependencies>
        <!-- Spring Boot Starter -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-tomcat</artifactId>
            <scope>provided</scope>
        </dependency>

        <!-- JavaFX -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <!-- richtextfx -->
        <dependency>
            <groupId>org.fxmisc.richtext</groupId>
            <artifactId>richtextfx</artifactId>
            <version>0.11.5</version>
        </dependency>

        <!-- ikonli (icons) -->
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-core</artifactId>
            <version>12.4.0</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-javafx</artifactId>
            <version>12.4.0</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-fontawesome-pack</artifactId>
            <version>12.4.0</version>
        </dependency>

        <!-- atlantafx (css) -->
        <dependency>
            <groupId>io.github.mkpaz</groupId>
            <artifactId>atlantafx-base</artifactId>
            <version>2.0.0</version>
        </dependency>
    </dependencies>

    <build>
        <finalName>${project.artifactId}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </path>
                        <path>
                            <groupId>org.springframework.boot</groupId>
                            <artifactId>spring-boot-configuration-processor</artifactId>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

            <!-- (0) Download runtime JRE -->
            <plugin>
                <groupId>com.googlecode.maven-download-plugin</groupId>
                <artifactId>download-maven-plugin</artifactId>
                <version>1.13.0</version>
                <executions>
                    <execution>
                        <id>download-jre</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>wget</goal>
                        </goals>
                        <configuration>
                            <url>${jre.download.link}</url>
                            <unpack>true</unpack>
                            <outputDirectory>${project.build.directory}/java</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- (1) Build monolithic fat JAR (with Spring Boot Maven Plugin) -->
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>

            <!-- (2) Copy fat JAR to the "app" folder -->
            <plugin>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <id>copy-main-jar-to-app</id>
                        <phase>package</phase>
                        <configuration>
                            <target>
                                <mkdir dir="${project.build.directory}/app"/>
                                <copy file="${project.build.directory}/${project.build.finalName}.jar"
                                      todir="${project.build.directory}/app"/>
                            </target>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- (3) jpackage plugin -->
            <plugin>
                <groupId>org.panteleyev</groupId>
                <artifactId>jpackage-maven-plugin</artifactId>
                <version>1.6.6</version>
                <executions>
                    <execution>
                        <id>run-jpackage</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jpackage</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <name>${project.artifactId}</name>
                    <appVersion>${project.version}</appVersion>
                    <vendor>github.com/vakho10</vendor>
                    <type>APP_IMAGE</type>
                    <runtimeImage>${project.build.directory}/java/${jre.root.folder}</runtimeImage>

                    <input>${project.build.directory}/app</input>
                    <destination>${project.build.directory}/dist</destination>

                    <mainJar>${project.build.finalName}.jar</mainJar>
                    <mainClass>org.springframework.boot.loader.launch.JarLauncher</mainClass>

                    <javaOptions>
                        <option>--enable-preview</option>
                        <option>-Dfile.encoding=UTF-8</option>
                    </javaOptions>

                    <icon>src/main/resources/logo/icon_32.ico</icon>
                </configuration>
            </plugin>

            <!-- (4) Copy application.properties file to the "dist" folder-->
            <plugin>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <id>copy-config-to-exe-dir</id>
                        <phase>verify</phase>
                        <configuration>
                            <target>
                                <copy file="${project.basedir}/src/main/resources/application.properties"
                                      tofile="${project.build.directory}/dist/${project.artifactId}/config/application.properties"/>
                            </target>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
